# trussflow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
docs/design/: agent-flow.md  agent-tools.md  memgraph-schema.md  req-spec.md  requirement-errata.md  vision.md  workflow.md
docs/prompts/: requirement-analyst.md  requirement-seed-writer.md
schemas/: agent_status.schema.json  amendment.schema.json  errata.schema.json  feature_extraction.schema.json  requirement.schema.json  requirement_derivation.schema.json  requirement_extraction.schema.json  requirement_grading.schema.json  workpackage_generation.schema.json
src/: alias.sh
src/trussflow/: __init__.py  __main__.py  analysis.py  cli.py  config.py  models.py  pipeline.py  prompts.py
src/trussflow/agents/: __init__.py  analyst.py  common.py  decomposer.py  feature_extractor.py  seed_writer.py  work_packager.py
src/trussflow/llm/: __init__.py  base.py  copilot.py  factory.py  gemini.py  stub.py
src/trussflow/orchestration/: __init__.py  checks.py  flows.py  git_ops.py  repair.py  runner.py  status.py  templates.py
src/trussflow/store/: __init__.py  graph.py
src/trussflow/validation/: __init__.py  project_validation.py  schema_validation.py
tests/: conftest.py  test_agents.py  test_cli.py  test_copilot_provider.py  test_decomposition.py  test_orchestration_checks.py  test_orchestration_flows.py  test_orchestration_git.py  test_orchestration_status.py  test_pipeline.py  test_project_validation.py  test_prompts_and_schema.py  test_schema_validation.py
